--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Lyn.Euler's Blog
+title: 右眼惺忪
 SEOTitle: Lyn.Euler's Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/blog-cover.jpg
 email: logasync@gmail.com
-description: "Every failure is leading towards success."
-keyword: "Lyn, Lyn.Euler, Euler的博客, flutter, dart, iOS, Apple, iPhone"
+description: "此生尽兴, 莫负勇往."
+keyword: "右眼惺忪, Cosin, 鱼弦, Lyn, Lyn.Euler, Euler的博客, Flutter, dart, iOS, Apple, iPhone, Android"
 url: "http://lyn-euler.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/yn-euler/yn-euler.github.io.git" # you code repository
