--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Jekyll Builder for GitHub Pages
   # You may pin to the exact commit or the version.
   # uses: fabacab/jekyll-builder-for-github-pages-action@0c1341fdcb51ef886778f27d43e76e792464f25e
-  uses: fabacab/jekyll-builder-for-github-pages-action@v1
-  with:
+   - uses: fabacab/jekyll-builder-for-github-pages-action@v1
+   - with:
     # If deploying to GitHub Pages, set this to the value of a GitHub Personal Access Token granted the `public_repo` and `repo_deployment` scopes.
     secret_gh_pages_api_token: # optional
     # Commands to run prior to build and deploy. Useful for ensuring build dependencies are up to date. For example, use `gem install bundler` to update Bundler to the latest available version.
