--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -14,5 +14,5 @@ jobs:
 
     steps:
     - name: Jekyll Builder for GitHub Pages
-    - uses: fabacab/jekyll-builder-for-github-pages-action@v1
+    uses: fabacab/jekyll-builder-for-github-pages-action@v1
    
