--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         buildPath: 'public'
         # Use if you have a need to build the site to another directory
-        hugoVersion: 'extended_0.58.3'
+        # hugoVersion: 'extended_0.58.3'
         # Use if your site requires a specific version of Hugo
         # Append "extended_" to the begining to use Hugo Extended
-        args: --gc --minify --cleanDestinationDir
+        # args: --gc --minify --cleanDestinationDir
