--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://lyn-euler.github.io/"
 languageCode = "en-us"
 title = "右眼惺忪"
 theme = "dimension"
