--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,6 @@
-baseURL = "https://lyn-euler.github.io/"
+baseURL = "//lyn-euler.github.io"
 languageCode = "en-us"
 title = "右眼惺忪"
 theme = "dimension"
+relativeURLs = true
+uglyURLs = true
