--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,34 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+name: Jekyll site CI
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ blog ]
   pull_request:
-    branches: [ master ]
+    branches: [ blog ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    ## Build
-    - name: Build Site
-      uses: chabad360/hugo-actions@master
-    ## Publish
-    - name: Publish Site
-      uses: chabad360/hugo-actions@master
-      with:
-        buildPath: 'public'
-        # Use if you have a need to build the site to another directory
-        # hugoVersion: 'extended_0.58.3'
-        # Use if your site requires a specific version of Hugo
-        # Append "extended_" to the begining to use Hugo Extended
-        # args: --gc --minify --cleanDestinationDir
+    - name: hugo-deploy
+      # You may pin to the exact commit or the version.
+      # uses: reuixiy/hugo-deploy@1185ce893b699b1809ec27bebcd8212a8127fefa
+      uses: reuixiy/hugo-deploy@v1
+      env:
+        DEPLOY_REPO: lyn-euler/lyn-euler.github.io
+        DEPLOY_BRANCH: master
+        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
