--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -19,5 +19,5 @@ jobs:
       uses: reuixiy/hugo-deploy@v1
       env:
         DEPLOY_REPO: lyn-euler/lyn-euler.github.io
-        DEPLOY_BRANCH: master
+        DEPLOY_BRANCH: blog
         DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
