--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -2,9 +2,9 @@ name: Jekyll site CI
 
 on:
   push:
-    branches: [ blog ]
+    branches: [ master ]
   pull_request:
-    branches: [ blog ]
+    branches: [ master ]
 
 jobs:
   build:
