--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -13,11 +13,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: hugo-deploy
-      # You may pin to the exact commit or the version.
-      # uses: reuixiy/hugo-deploy@1185ce893b699b1809ec27bebcd8212a8127fefa
-      uses: reuixiy/hugo-deploy@v1
-      env:
-        DEPLOY_REPO: lyn-euler/lyn-euler.github.io
-        DEPLOY_BRANCH: test
-        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+    - name: Publish Site
+      uses: chabad360/hugo-gh-pages@master
+      with:
+        githubToken: ${{ secrets.DEPLOY_KEY }}
+        # Remember to set this as a secret (i.e. secrets.PERSONAL_TOKEN).
+        # Don't forget to set the secret value in the project settings.
+        # cname: mysite.com # Or anything else
+        # Use if you have a custom domain for your site.
+        # branch: master # Or anything else
+        # Use if your site is not hosted on the gh-pages branch.
+        # repo: you/you.github.io
+        # Use if you're pushing to a different repo.
+        # Dont add ".git" to the end of the URL (youl'll get 404s).
+        # hugoVersion: extended_0.58.3
+        # Use if your site requires a specific version of Hugo.
+        # Append "extended_" to the begining to use Hugo Extended.
+        # args: --gc --minify --cleanDestinationDir
+        # Use if you want to pass some custom arguments to Hugo.
+        # siteDir: /github/workspace/site
