--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -12,7 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Repo
+      uses: actions/checkout@master
+      with:
+        submodules: true
     - name: Publish Site
       uses: chabad360/hugo-gh-pages@master
       with:
