--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -12,26 +12,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@master
+    - uses: actions/checkout@v2
       with:
-        submodules: true
-    - name: Publish Site
-      uses: chabad360/hugo-gh-pages@master
+        submodules: true  # Fetch Hugo themes (true OR recursive)
+        fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
+    - name: Setup Hugo
+      uses: peaceiris/actions-hugo@v2
       with:
-        githubToken: ${{ secrets.DEPLOY_KEY }}
-        # Remember to set this as a secret (i.e. secrets.PERSONAL_TOKEN).
-        # Don't forget to set the secret value in the project settings.
-        # cname: mysite.com # Or anything else
-        # Use if you have a custom domain for your site.
-        # branch: master # Or anything else
-        # Use if your site is not hosted on the gh-pages branch.
-        # repo: you/you.github.io
-        # Use if you're pushing to a different repo.
-        # Dont add ".git" to the end of the URL (youl'll get 404s).
-        # hugoVersion: extended_0.58.3
-        # Use if your site requires a specific version of Hugo.
-        # Append "extended_" to the begining to use Hugo Extended.
-        # args: --gc --minify --cleanDestinationDir
-        # Use if you want to pass some custom arguments to Hugo.
-        # siteDir: /github/workspace/site
+        hugo-version: '0.75.1'
+        # extended: true
+
+    - name: Build
+      run: hugo --minify
+
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.DEPLOY_KEY }}
+        publish_dir: ./public
