--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -13,14 +13,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with:
-        submodules: true  # Fetch Hugo themes (true OR recursive)
-        fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+      #with:
+        #submodules: true  # Fetch Hugo themes (true OR recursive)
+        #fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
-      with:
-        hugo-version: '0.75.1'
+      #with:
+        #hugo-version: '0.75.1'
         # extended: true
 
     - name: Build
